--- a/package.json
+++ b/package.json
@@ -1,29 +1,39 @@
 {
-  "name": "daroappserver",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node_modules/.bin/nodemon app.js --exec babel-node --"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Zorkann/DaroAppServer.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Zorkann/DaroAppServer/issues"
-  },
-  "homepage": "https://github.com/Zorkann/DaroAppServer#readme",
-  "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.10"
-  }
+   "name": "daroappserver",
+   "version": "1.0.0",
+   "description": "",
+   "main": "app.js",
+   "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "tsc && node_modules/.bin/nodemon build/app.js --exec babel-node --"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/Zorkann/DaroAppServer.git"
+   },
+   "author": "",
+   "license": "ISC",
+   "bugs": {
+      "url": "https://github.com/Zorkann/DaroAppServer/issues"
+   },
+   "homepage": "https://github.com/Zorkann/DaroAppServer#readme",
+   "dependencies": {
+      "@types/body-parser": "^1.17.0",
+      "@types/express": "^4.16.1",
+      "@types/node": "^11.13.8",
+      "@types/pg": "^7.4.14",
+      "babel-cli": "^6.26.0",
+      "babel-preset-es2015": "^6.24.1",
+      "body-parser": "^1.19.0",
+      "express": "^4.16.4",
+      "pg": "^7.10.0",
+      "reflect-metadata": "^0.1.10",
+      "typeorm": "0.2.16"
+   },
+   "devDependencies": {
+      "@types/node": "8.0.29",
+      "nodemon": "^1.18.10",
+      "ts-node": "3.3.0",
+      "typescript": "^3.5.0-dev.20190430"
+   }
 }
