--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,3 +14,12 @@ services:
             - POSTGRES_USER=postgres
         ports:
             - 8081:5432
+    server:
+        image: server
+        build: .
+        depends_on:
+            - postgres
+        ports:
+            - 8082:5000
+        volumes:
+            - ./app/src:/app/src
