--- a/app/package.json
+++ b/app/package.json
@@ -5,14 +5,11 @@
    "main": "build/app.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "nodemon build/app.js",
-      "start:watch": "node build/app.js",
+      "start": "tsc && nodemon build/app.js",
+      "start:watch": "tsc && node build/app.js",
       "tsc:watch": "tsc --watch",
-      "db": "brew services start postgresql",
-      "create": "typeorm migration:generate -n Test",
-      "createX": "typeorm migration:create -n Test",
-      "migrate": "typeorm migration:run",
-      "sync": "typeorm schema:sync"
+      "generate": "npx ts-node ./node_modules/.bin/typeorm migration:generate",
+      "migrate": "npx ts-node ./node_modules/.bin/typeorm migration:run"
    },
    "repository": {
       "type": "git",
