--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
       "babel-cli": "^6.26.0",
       "babel-preset-es2015": "^6.24.1",
       "body-parser": "^1.19.0",
+      "cors": "^2.8.5",
       "express": "^4.16.4",
       "pg": "^7.10.0",
       "reflect-metadata": "^0.1.10",
