--- a/app/ormconfig.json
+++ b/app/ormconfig.json
@@ -1,6 +1,6 @@
 {
    "type": "postgres",
-   "host": "postgres",
+   "host": "localhost",
    "port": 5432,
    "username": "postgres",
    "password": "postgres",
@@ -8,12 +8,12 @@
    "synchronize": false,
    "migrationsRun": false,
    "logging": false,
-   "entities": ["build/entity/**/*.js"],
+   "entities": ["src/entity/**/*.ts"],
    "migrations": [
-      "build/migration/**/*.js"
+      "src/migration/**/*.ts"
    ],
    "subscribers": [
-      "build/subscriber/**/*.js"
+      "src/subscriber/**/*.ts"
    ],
    "cli": {
       "entitiesDir": "src/entity",
