--- a/app/ormconfig.json
+++ b/app/ormconfig.json
@@ -1,23 +1,19 @@
 {
-   "type": "postgres",
-   "host": "postgres",
-   "port": 5432,
-   "username": "postgres",
-   "password": "postgres",
-   "database": "postgres",
-   "synchronize": false,
-   "migrationsRun": false,
-   "logging": false,
-   "entities": ["build/entity/**/*.js"],
-   "migrations": [
-      "build/migration/**/*.js"
-   ],
-   "subscribers": [
-      "build/subscriber/**/*.js"
-   ],
-   "cli": {
-      "entitiesDir": "src/entity",
-      "migrationsDir": "src/migration",
-      "subscribersDir": "src/subscriber"
-   }
+  "type": "postgres",
+  "host": "localhost",
+  "port": 8081,
+  "username": "postgres",
+  "password": "postgres",
+  "database": "postgres",
+  "synchronize": true,
+  "migrationsRun": false,
+  "logging": false,
+  "entities": ["build/entity/**/*.js"],
+  "migrations": ["build/migration/**/*.js"],
+  "subscribers": ["build/subscriber/**/*.js"],
+  "cli": {
+    "entitiesDir": "src/entity",
+    "migrationsDir": "src/migration",
+    "subscribersDir": "src/subscriber"
+  }
 }
