--- a/app/package.json
+++ b/app/package.json
@@ -1,56 +1,56 @@
 {
-   "name": "daroappserver",
-   "version": "1.0.0",
-   "description": "",
-   "main": "build/app.js",
-   "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "tsc && nodemon build/app.js",
-      "start:watch": "tsc && node build/app.js",
-      "tsc:watch": "tsc --watch",
-      "generate": "npx ts-node ./node_modules/.bin/typeorm migration:generate",
-      "migrate": "npx ts-node ./node_modules/.bin/typeorm migration:run"
-   },
-   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/Zorkann/DaroAppServer.git"
-   },
-   "author": "",
-   "license": "ISC",
-   "bugs": {
-      "url": "https://github.com/Zorkann/DaroAppServer/issues"
-   },
-   "homepage": "https://github.com/Zorkann/DaroAppServer#readme",
-   "dependencies": {
-      "@types/body-parser": "^1.17.0",
-      "@types/express": "^4.16.1",
-      "@types/node": "^11.13.8",
-      "@types/pg": "^7.4.14",
-      "babel-cli": "^6.26.0",
-      "babel-preset-es2015": "^6.24.1",
-      "body-parser": "^1.19.0",
-      "cors": "^2.8.5",
-      "express": "^4.16.4",
-      "pg": "^7.10.0",
-      "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.16"
-   },
-   "devDependencies": {
-      "nodemon": "^1.18.10",
-      "ts-node": "7.0.1",
-      "typescript": "3.4.5"
-   },
-   "nodemonConfig": {
-      "ignore": [
-         "**/*.test.ts",
-         "**/*.spec.ts",
-         ".git",
-         "node_modules"
-      ],
-      "watch": [
-         "src"
-      ],
-      "exec": "npm run start:watch",
-      "ext": "ts"
-   }
+  "name": "daroappserver",
+  "version": "1.0.0",
+  "description": "",
+  "main": "build/app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc && nodemon build/app.js",
+    "start:watch": "tsc && node build/app.js",
+    "tsc:watch": "tsc --watch",
+    "generate": "npx ts-node ./node_modules/.bin/typeorm migration:generate",
+    "migrate": "npx ts-node ./node_modules/.bin/typeorm migration:run"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Zorkann/DaroAppServer.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Zorkann/DaroAppServer/issues"
+  },
+  "homepage": "https://github.com/Zorkann/DaroAppServer#readme",
+  "dependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.16.1",
+    "@types/node": "^11.13.8",
+    "@types/pg": "^7.4.14",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "pg": "^7.10.0",
+    "reflect-metadata": "^0.1.10",
+    "typeorm": "^0.2.22"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10",
+    "ts-node": "7.0.1",
+    "typescript": "3.4.5"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "**/*.test.ts",
+      "**/*.spec.ts",
+      ".git",
+      "node_modules"
+    ],
+    "watch": [
+      "src"
+    ],
+    "exec": "npm run start:watch",
+    "ext": "ts"
+  }
 }
