--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,25 @@
 version: "3"
 services:
-    pgadmin:
-        image: fenglc/pgadmin4
-        environment:
-            - DEFAULT_USER=admin
-            - DEFAULT_PASSWORD=admin
-        ports:
-            - 8080:5050
-    postgres:
-        image: 'postgres'
-        environment:
-            - POSTGRES_PASSWORD=postgres
-            - POSTGRES_USER=postgres
-        ports:
-            - 8081:5432
-    server:
-        image: server
-        build: .
-        depends_on:
-            - postgres
-        ports:
-            - 8082:5000
-        volumes:
-            - ./app/src:/app/src
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin
+      - PGADMIN_DEFAULT_PASSWORD=admin
+    ports:
+      - 8080:80
+  postgres:
+    image: "postgres"
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+    ports:
+      - 8081:5432
+  server:
+    image: server
+    build: .
+    depends_on:
+      - postgres
+    ports:
+      - 8082:5000
+    volumes:
+      - ./app/src:/app/src
