--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,22 +1,16 @@
 {
-   "exclude": [
-      "node_modules",
-      "build"
-   ],
-   "compilerOptions": {
-      "lib": [
-         "es5",
-         "es6"
-      ],
-      "target": "es5",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "outDir": "./build",
-      "baseUrl" : "./src",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "sourceMap": true,
-      "skipLibCheck": true,
-      "allowJs": false,
-   }
+  "exclude": ["node_modules", "build"],
+  "compilerOptions": {
+    "lib": ["es5", "es6"],
+    "target": "es5",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "outDir": "./build",
+    "baseUrl": "./src",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "sourceMap": true,
+    "skipLibCheck": true,
+    "allowJs": false
+  }
 }
