--- a/app/ormconfig.json
+++ b/app/ormconfig.json
@@ -1,11 +1,11 @@
 {
   "type": "postgres",
-  "host": "localhost",
-  "port": 8081,
+  "host": "postgres",
+  "port": 5432,
   "username": "postgres",
   "password": "postgres",
   "database": "postgres",
-  "synchronize": true,
+  "synchronize": false,
   "migrationsRun": false,
   "logging": false,
   "entities": ["build/entity/**/*.js"],
